<!--@author: Jordan Goldey-->
<!--@date: 9/22/2015-->
<!--@purpose: Acts a generic popdown with a title, text filed, a cancel button, and a enter
button..-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:id="@+id/textPopupLayout"
    android:padding="@dimen/dropdown_popup_padding"
    android:background="@color/popup_color">
    <TextView
        android:layout_width="@dimen/dropdown_popup_width"
        android:layout_height="wrap_content"
        android:text="@string/textPopupTitle"
        android:id="@+id/textPopupTitle"
        android:textSize="@dimen/dropdown_popup_text_width"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textPopupTextField"
        android:textSize="@dimen/dropdown_popup_text_width"
        android:gravity="center_horizontal"
        android:text="@string/enter_text_here" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textPopupButtonLayout"
        android:gravity="center">

        <Button
            android:id="@+id/textPopupCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/dropdown_popup_text_width"
            android:padding="@dimen/dropdown_popup_padding" />

        <Space
            android:layout_width="@dimen/dropdown_popup_space_dimension"
            android:layout_height="@dimen/dropdown_popup_space_dimension"
            android:id="@+id/textPopupSpace" />

        <Button
            android:id="@+id/textPopupEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textSize="@dimen/dropdown_popup_text_width"
            android:padding="@dimen/dropdown_popup_padding" />

    </LinearLayout>

</LinearLayout>