<!--@author: Jordan Goldey-->
<!--@date: 9/24/2015-->
<!--@purpose: The third activity shows the players of a certain team in there positions. Each
position has a picture and can be changed by clicking. There is also a button to play game and go
first activity.-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.fantasysoccerapp.third_activity">

    <com.example.administrator.fantasysoccerapp.soccerField
        android:background="@color/green"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/soccerField"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/teamOneText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/team_one"
        android:textSize="@dimen/third_activity_large_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/team_two"
        android:id="@+id/teamTwoText"
        android:textSize="@dimen/third_activity_large_text_size"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/teamTwoDropdown"
        android:layout_toStartOf="@+id/teamTwoDropdown" />

    <Spinner
        android:layout_width="@dimen/third_activity_spinner_length"
        android:layout_height="wrap_content"
        android:id="@+id/teamOneDropdown"
        android:layout_alignBottom="@+id/teamOneText"
        android:layout_toRightOf="@+id/teamOneText"
        android:layout_toStartOf="@+id/team1Forward1"
        android:layout_toLeftOf="@+id/team1Forward1" />

    <Spinner
        android:layout_width="@dimen/third_activity_spinner_length"
        android:layout_height="wrap_content"
        android:id="@+id/teamTwoDropdown"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goBack"
        android:id="@+id/leaveThirdActivity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playGame"
        android:id="@+id/playGame"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="@dimen/third_activity_image"
        android:layout_height="@dimen/third_activity_image"
        android:id="@+id/team1Goalie"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <ImageButton
        android:layout_width="@dimen/third_activity_image"
        android:layout_height="@dimen/third_activity_image"
        android:id="@+id/team1Forward1"
        android:layout_alignTop="@+id/team1Defense1"
        android:layout_alignLeft="@+id/team1Forward2"
        android:layout_alignStart="@+id/team1Forward2" />

    <ImageButton
        android:layout_width="@dimen/third_activity_image"
        android:layout_height="@dimen/third_activity_image"
        android:id="@+id/team1Forward2"
        android:layout_alignTop="@+id/team1Defense2"
        android:layout_toRightOf="@+id/teamOneText"
        android:layout_toEndOf="@+id/teamOneText"
        android:layout_marginLeft="103dp"
        android:layout_marginStart="103dp" />

    <ImageButton
        android:layout_width="@dimen/third_activity_image"
        android:layout_height="@dimen/third_activity_image"
        android:id="@+id/team1Defense2"
        android:layout_below="@+id/team1Goalie"
        android:layout_toLeftOf="@+id/teamOneDropdown"
        android:layout_toStartOf="@+id/teamOneDropdown" />

    <ImageButton
        android:layout_width="@dimen/third_activity_image"
        android:layout_height="@dimen/third_activity_image"
        android:id="@+id/team1Defense1"
        android:layout_above="@+id/team1Goalie"
        android:layout_alignLeft="@+id/team1Defense2"
        android:layout_alignStart="@+id/team1Defense2" />

    <ImageButton
        android:layout_width="@dimen/third_activity_image"
        android:layout_height="@dimen/third_activity_image"
        android:id="@+id/team2Forward1"
        android:layout_alignTop="@+id/team1Forward1"
        android:layout_alignLeft="@+id/teamTwoText"
        android:layout_alignStart="@+id/teamTwoText" />

    <ImageButton
        android:layout_width="@dimen/third_activity_image"
        android:layout_height="@dimen/third_activity_image"
        android:id="@+id/team2Forward2"
        android:layout_alignTop="@+id/team1Forward2"
        android:layout_alignLeft="@+id/team2Forward1"
        android:layout_alignStart="@+id/team2Forward1" />

    <ImageButton
        android:layout_width="@dimen/third_activity_image"
        android:layout_height="@dimen/third_activity_image"
        android:id="@+id/team2Goalie"
        android:layout_above="@+id/team2Forward2"
        android:layout_alignLeft="@+id/playGame"
        android:layout_alignStart="@+id/playGame" />

    <ImageButton
        android:layout_width="@dimen/third_activity_image"
        android:layout_height="@dimen/third_activity_image"
        android:id="@+id/team2Defense2"
        android:layout_alignTop="@+id/team2Forward2"
        android:layout_toLeftOf="@+id/teamTwoDropdown"
        android:layout_toStartOf="@+id/teamTwoDropdown" />

    <ImageButton
        android:layout_width="@dimen/third_activity_image"
        android:layout_height="@dimen/third_activity_image"
        android:id="@+id/team2Defense1"
        android:layout_alignTop="@+id/team2Forward1"
        android:layout_alignLeft="@+id/team2Defense2"
        android:layout_alignStart="@+id/team2Defense2" />
</RelativeLayout>
